# kinto-integration-tests

./: .dockerignore  .gitignore  .pyup.yml  .travis.yml  Dockerfile  Jenkinsfile  LICENSE  Makefile  Pipfile  README.md  conftest.py  dev-requirements.txt  manifest.ini  pipenv.txt  pub  pyproject.toml  requirements.txt  run  server.ini  setup.py  testrail.cfg  tox.ini
.circleci/: config.yml
config-test/: conftest.py  test_dlc.py  test_kinto_signer.py  test_server_details.py  test_webextensions_stack.py  webextensions-check-prod.sh  webextensions-check-stage.sh
config-tests/: conftest.py  test_dlc.py  test_email_notification.py  test_gdpr_delete_functionality.py  test_gdpr_notes_delete_functionality.py  test_gdpr_webextensions_delete_functionality.py  test_gpdr_functionality.py  test_kinto_signer.py  test_kintowe_crud.py  test_remote_settings.py  test_server_details.py
fxtesteng/: README.txt  helpers.py  setup.py
scripts/: out.env  webextensions-check-prod.sh  webextensions-check-stage.sh
