[tool.poetry]
name = "kinto-integration-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kinto-http = "^10.7.0"
PyFxA = "^0.7.7"
pytest = "^6.2.2"
pytest-fxa = "^1.4.0"
pytest-asyncio = "^0.14.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
